...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="C5O-Ww-vBA">
                                <rect key="frame" x="0.0" y="378" width="375" height="177"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LR7-Cu-X2R">
                                        <rect key="frame" x="67" y="0.0" width="241" height="66"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                        <state key="normal" title="Join Session"/>
                                        <connections>
                                            <segue destination="lbG-NH-MnX" kind="show" id="sqv-MR-7TV"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWC-Kg-JTZ">
                                        <rect key="frame" x="43.5" y="111" width="288" height="66"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                        <state key="normal" title="Create Session"/>
                                        <connections>
                                            <segue destination="PQ6-zc-E4C" kind="show" id="8Ti-ZN-Zgn"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NPc-1o-1al">
                                <rect key="frame" x="0.0" y="337" width="375" height="280"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rlh-p0-7kO">
                                        <rect key="frame" x="145" y="58" width="85" height="30"/>
                                        <state key="normal" title="Queue Song"/>
                                        <connections>
                                            <action selector="uiQueueSong:" destination="BYZ-38-t0r" eventType="touchUpInside" id="knx-GS-ai5"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a youtube url" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6EG-tS-uqY">
                                        <rect key="frame" x="116" y="20" width="143.5" height="30"/>
...
                                            <action selector="uiCopyCodeButton:" destination="PQ6-zc-E4C" eventType="touchUpInside" id="xhW-r7-rCU"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="auP-Kh-jhT">
                                        <rect key="frame" x="147.5" y="202" width="80" height="36"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Continue"/>
                                        <connections>
                                            <segue destination="BYZ-38-t0r" kind="show" id="mhI-AH-rx4"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
